# MPI-Communication-Avoiding-Parallel-Sparse-Dense-Multiplication

./: CMakeLists.txt  README.md
include/: densematgen.h  logger.h  matmul.h  matrix.h  mpi.h  utils.h
raport/: raport-MPI Communication-Avoiding Parallel Sparse-Dense Multiplication.html
src/: col_a.cpp  densematgen.cpp  generator_main.cpp  inner_abc.cpp  logger.cpp  main.cpp  matmul.cpp  matrix.cpp  mpi.cpp  utils.cpp
